# xml-parsing

./: .gitignore  Makefile  README.md  pyproject.toml  rent_portal.sqlite
.github/actions/python-setup/: action.yaml
.github/workflows/: workflow.yaml
app/: app.py  config.ini
app/models/: list_item.py
app/tables/: measurements.py
app/utils/: config.py  database.py  logger.py
