[tool.poetry]
name = "xml-parsing"
version = "0.1.0"
description = ""
authors = ["Algirdas Jauniskis <jauniskis.a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyright = "^1.1.260"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
